objects/Quote_Period__c.object
<CustomObject>
    <fields>
        <fullName>Default_Increase__c</fullName>
        <label>Default Increase</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Period_Care_Rate__c</fullName>
        <label>Default Period Care Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KPI1__c</fullName>
        <label>KPI1</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KPI2__c</fullName>
        <label>KPI2</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_to_Partner_Uplift_Fee__c</fullName>
        <label>Partner to Partner Uplift Fee</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quarterly_Semi_Annual_Fee__c</fullName>
        <label>Quarterly Semi Annual Fee</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Quote Periods</relationshipLabel>
        <relationshipName>Quote_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Quote Period</label>
    <nameField>
        <displayFormat>QP-{000000}</displayFormat>
        <label>Quote Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>